--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -10,16 +10,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Increment patch version
-        id: semver
-        uses: mathieudutour/github-tag-action@v5
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          version: 'patch'
-
-      - name: Set new version in environment variable
-        run: echo "NEW_VERSION=${{ steps.semver.outputs.new_tag }}" >> $GITHUB_ENV
-
-      - name: Java Maven release
-        uses: qcastel/github-actions-maven-release@v1.12.31
-        with:
-          version: '${{ env.NEW_VERSION }}'
+        run: mvn validate -DbumpMinor
