--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,9 +1,9 @@
 on:
-  pull_request:
-    types:
-      - closed
+  push:
     branches:
-      - "master"
+      - main
+
+
       
 jobs:
   build:
